Valoracion Resource y arreglo toList